k8s-deploy.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
    name: k8s-deploy 
spec: 
    replicas: 1
    selector: 
        matchLabels: 
            app: jobstar
    template: 
        metadata: 
            labels: 
                app: jobstar 
        spec: 
            containers:
                - name: jobstar
                  image: andrewta999/jobstar 
---
apiVersion: v1 
kind: Service 
metadata: 
    name: jobstar-srv 
spec: 
    selector:
        app: jobstar
        ports:
            - name: jobstar
              protocol: TCP 
              port: 3000 
              targetPort: 3000
