k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress 
metadata: 
  name: k8s-ingress 
  annotations: 
    kubernetes.io/ingress.class: nginx 
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: jobstar.dev 
      http: 
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: jobstar-srv 
              servicePort: 3000
